--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,12 @@ header {
 
 a {
     font-size: 12px;
-    color: white;
+    color: #333;
     text-decoration: none;
+}
+
+a:hover{
+    opacity: 0.8;
 }
 
 h1 {
